[project]
name = "free-llm-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=0.8.0",
    "coloredlogs>=15.0.1",
    "fastapi>=0.68.0",
    "httpx>=0.23.0",
    "pydantic>=1.8.2",
    "python-dotenv>=0.19.0",
    "python-multipart>=0.0.5",
    "pyyaml>=6.0",
    "requests>=2.32.3",
    "ruamel-yaml>=0.18.10",
    "uvicorn>=0.15.0",
]
