[project]
name = "free-llm-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=0.8.0",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.3",
    "coloredlogs>=15.0.1",
    "fastapi>=0.68.0",
    "httpx>=0.23.0",
    "pandas>=2.2.3",
    "pydantic>=1.8.2",
    "python-dotenv>=0.19.0",
    "python-multipart>=0.0.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruamel-yaml>=0.18.10",
    "uvicorn>=0.15.0",
    "sqlalchemy>=1.4.0", # Added sqlalchemy
    "passlib[bcrypt]>=1.7.4", # Added passlib with bcrypt extra
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "black>=25.1.0",
    "flake8>=7.1.2",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pylint>=3.3.5",
    "pytest>=8.3.5",
    "uv>=0.6.6",
]
